# conduit-mcp

./: .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  contributing.md  pyproject.toml  pyright-manual.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general.yml
.github/workflows/: run-static.yml  run-tests.yml
scripts/: typecheck.sh
src/conduit/auth/: oauth_client.py
src/conduit/client/: callbacks.py  coordinator.py  coordinator_v2.py  message_context.py  request_context.py  server_manager.py  server_manager_v2.py  session.py  session_v2.py
src/conduit/examples/: calculator.py  oura.py
src/conduit/protocol/: base.py  common.py  completions.py  content.py  elicitation.py  initialization.py  logging.py  prompts.py  resources.py  roots.py  sampling.py  tools.py  unions.py
src/conduit/server/: callbacks.py  client_manager.py  coordinator.py  coordinator_v2.py  message_context.py  processor.py  request_context.py  session.py  session_v2.py  utils.py
src/conduit/shared/: __init__.py  exceptions.py  (+3 more)
tests/client/: test_callback_manager.py  test_server_manager.py
tests/protocol/: test_base.py  test_common.py  test_completions.py  test_content.py  test_elicitation.py  test_exports.py  test_initialization.py  test_jsonrpc.py  test_logging.py  test_prompts.py  test_resources.py  test_roots.py  test_sampling.py  test_tools.py
tests/server/: test_callback_manager.py  test_client_manager.py  test_resource_manager.py  test_utils.py
tests/shared/: conftest.py  test_request_tracker.py
(+171 files in other folders)
