[project]
name = "conduit-mcp"
version = "0.1.0"
license = "Apache-2.0"
description = "A Python SDK for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]
