[project]
name = "conduit-mcp"
version = "0.1.0"
license = "Apache-2.0"
description = "A Python SDK for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
